<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addTodoLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addtodo.AddTodoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:gravity="center">

        <TextView
            android:id="@+id/titleTextDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_gravity="start"
            android:textSize="@dimen/item_text_size" />

        <EditText
            android:id="@+id/todoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="@color/grey_light_text_color"
            android:layout_marginStart="@dimen/common_margin"
            android:hint="@string/title_hint"
            android:autofillHints="" />

        <TextView
            android:id="@+id/descriptionTextDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_gravity="start"
            android:textSize="@dimen/item_text_size" />

        <EditText
            android:id="@+id/todoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="@color/grey_light_text_color"
            android:layout_marginStart="@dimen/common_margin"
            android:hint="@string/description_hint"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin">

        <TextView
            android:id="@+id/reminderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/item_text_size"
            android:layout_marginStart="@dimen/common_margin"
            android:text="@string/reminder" />

        <Switch
            android:id="@+id/reminderSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="@dimen/common_margin" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reminderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="@dimen/common_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notifyMeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notify_me"
            android:layout_marginStart="@dimen/common_margin"
            android:textSize="@dimen/item_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin">

            <TextView
                android:id="@+id/datePickerText"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_text_size"
                android:layout_margin="@dimen/common_margin"
                android:text="@string/set_date" />

            <TextView
                android:id="@+id/atText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at"
                android:gravity="center"
                android:textSize="@dimen/item_text_size"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginBottom="@dimen/common_margin" />

            <TextView
                android:id="@+id/timePickerText"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_text_size"
                android:gravity="start"
                android:layout_margin="@dimen/common_margin"
                android:text="@string/set_time" />
        </LinearLayout>


        <TextView
            android:id="@+id/dateInPast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:textSize="14sp"
            android:text="@string/date_in_past"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@android:color/holo_red_light" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_done"
        android:layout_gravity="end"
        android:layout_margin="@dimen/common_margin" />
</LinearLayout>